Revert "Fix misaligned shopping cart in CME header"
This reverts commit 6f2ecd51333ba0d2b6276745ebd0d6e92f8f7ad2.

--- a/lms/static/sass/course/layout/_courseware_header.scss
+++ b/lms/static/sass/course/layout/_courseware_header.scss
@@ -160,6 +160,7 @@
 
   h2 {
     display: block;
+    width: 65%;
     @include float(left);
     font-size: 0.9em;
     font-weight: 600;
